--- a/clone/index.html
+++ b/clone/index.html
@@ -35,16 +35,74 @@
                 <span class="material-icons"> menu</span>
             </ul>
         </div>
-        
-        <div class="fixmenu">
-            <ul class="submenu">
-                <li> 에매 </li>
-                <li> 영화 </li>
-                <li> 영화관 </li>
-                <li> 이벤트 </li>
-                <li> 스토어 </li>
-            </ul>
-        </div>
+
+        <ul class="fixedmenu">
+            <li class="submenu">
+                <div class="submenu_title"> 예매
+                    <!-- <div class="submenu_content">
+                        <ul class="inner">
+                            <li> 예매하기 </li>
+                            <li> 상영시간표 </li>
+                            <li> 할인 안내 </li>
+                        </ul> -->
+                </div>
+                </div>
+            </li>
+            <li class="submenu">
+                <div class="submenu_title"> 영화
+                    <!-- <div class="submenu_content">
+                        <ul class="inner">
+                            <li> 홈 </li>
+                            <li> 현재 상영작</li>
+                            <li> 아르떼 </li>
+                            <li> 국립극장 </li>
+                        </ul> -->
+                </div>
+                </div>
+            </li>
+            <li class="submenu">
+                <div class="submenu_title"> 영화관
+                    <!-- <div class="submenu_content">
+                        <ul class="inner">
+                            <ul class="area"> 스폐셜관</ul>
+                            <ul class="area"> 서울 </ul>
+                            <ul class="area"> 경기/인천 </ul>
+                            <ul class="area"> 충청/대전 </ul>
+                            <ul class="area"> 전라/광주 </ul>
+                            <ul class="area"> 경북/대구 </ul>
+                            <ul class="area"> 경남/부산/울산 </ul>
+                            <ul class="area"> 강원 </ul>
+                            <ul class="area"> 제주 </ul>
+                        </ul> 
+                    </div>-->
+                </div>
+            </li>
+            <li class="submenu">
+                <div class="submenu_title"> 이벤트
+                    <!-- <div class="submenu_content">
+                        <ul class="inner">
+                            <li> 영화 </li>
+                            <li> 시사회/무대인사 </li>
+                            <li> HOT </li>
+                            <li> 제휴할인 </li>
+                            <li> 우리동네영화관 </li>
+                        </ul>
+                    </div> -->
+                </div>
+            </li>
+            <li class="submenu">
+                <div class="submenu_title"> 스토어
+                    <!-- <div class="submenu_content">
+                    <ul class="inner">
+                        <li> 베스트 </li>
+                        <li> 관람권 </li>
+                        <li> 스낵음료 </li>
+                        <li> 포토카드 </li>
+                    </ul>
+                </div> -->
+                </div>
+            </li>
+        </ul>
 
     </header>
 </body>
