꼬여서 다시 시작.

--- a/clone/index.html
+++ b/clone/index.html
@@ -14,95 +14,111 @@
 
 <body>
     <header>
-        <a href="index.html" class="logo">
-            <img src="image/whitelogo.png" alt="로고" />
-        </a>
-        <div class="gnb">
-            <ul class="social">
-                <li> <a> 페이스북 </a>
-                <li> <a> 유튜브 </a>
-                <li> <a> 인스타그램 </a>
-            </ul>
-            <ul class="info">
-                <li><a> 멤버십 </a>
-                <li><a> 고객센터</a>
-                <li><a> 단체관람/대관문의</a>
-                <li><a> 로그인</a>
-            </ul>
-            <ul class="gnbm">
-                <li><a> 회원가입 </a></li>
-                <li><a> 바로예매 </a></li>
-                <span class="material-icons"> menu</span>
-            </ul>
+        <div class="submenu">
+            <a href="index.html" class="logo">
+                <img src="image/whitelogo.png" alt="로고" />
+            </a>
+            <div class="gnb">
+                <ul class="social">
+                    <li> <a> 페이스북 </a>
+                    <li> <a> 유튜브 </a>
+                    <li> <a> 인스타그램 </a>
+                </ul>
+                <ul class="info">
+                    <li><a> 멤버십 </a>
+                    <li><a> 고객센터</a>
+                    <li><a> 단체관람/대관문의</a>
+                    <li><a> 로그인</a>
+                </ul>
+                <ul class="gnsm">
+                    <li><a> 회원가입 </a></li>
+                    <li><a> 바로예매 </a></li>
+                    <span class="material-icons"> menu</span>
+                </ul>
+            </div>
         </div>
 
-        <ul class="fixedmenu">
-            <li class="submenu">
-                <div class="submenu_title"> 예매
-                    <!-- <div class="submenu_content">
-                        <ul class="inner">
-                            <li> 예매하기 </li>
-                            <li> 상영시간표 </li>
-                            <li> 할인 안내 </li>
-                        </ul> -->
-                </div>
-                </div>
-            </li>
-            <li class="submenu">
-                <div class="submenu_title"> 영화
-                    <!-- <div class="submenu_content">
-                        <ul class="inner">
-                            <li> 홈 </li>
-                            <li> 현재 상영작</li>
-                            <li> 아르떼 </li>
-                            <li> 국립극장 </li>
-                        </ul> -->
-                </div>
-                </div>
-            </li>
-            <li class="submenu">
-                <div class="submenu_title"> 영화관
-                    <!-- <div class="submenu_content">
-                        <ul class="inner">
-                            <ul class="area"> 스폐셜관</ul>
-                            <ul class="area"> 서울 </ul>
-                            <ul class="area"> 경기/인천 </ul>
-                            <ul class="area"> 충청/대전 </ul>
-                            <ul class="area"> 전라/광주 </ul>
-                            <ul class="area"> 경북/대구 </ul>
-                            <ul class="area"> 경남/부산/울산 </ul>
-                            <ul class="area"> 강원 </ul>
-                            <ul class="area"> 제주 </ul>
-                        </ul> 
-                    </div>-->
-                </div>
-            </li>
-            <li class="submenu">
-                <div class="submenu_title"> 이벤트
-                    <!-- <div class="submenu_content">
-                        <ul class="inner">
-                            <li> 영화 </li>
-                            <li> 시사회/무대인사 </li>
-                            <li> HOT </li>
-                            <li> 제휴할인 </li>
-                            <li> 우리동네영화관 </li>
-                        </ul>
-                    </div> -->
-                </div>
-            </li>
-            <li class="submenu">
-                <div class="submenu_title"> 스토어
-                    <!-- <div class="submenu_content">
-                    <ul class="inner">
-                        <li> 베스트 </li>
-                        <li> 관람권 </li>
-                        <li> 스낵음료 </li>
-                        <li> 포토카드 </li>
-                    </ul>
-                </div> -->
-                </div>
-            </li>
-        </ul>
+        <div class="fixmenu">
+            <ul class="menu_list">
+                <li class="menu">
+                    <div class="name">예매</div>
+                    <div class="menu_title">
+                        <div class="menu_content">
+                            <ul class="inner">
+                                <li>예매하기</li>
+                                <li>영시간표</li>
+                                <li>할인 안내</li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="menu">
+                    <div class="name">영화</div>
+                    <div class="menu_title">
+                        <div class="menu_content">
+                            <ul class="inner">
+                                <li> 홈 </li>
+                                <li> 현재 상영작</li>
+                                <li> 아르떼 </li>
+                                <li> 국립극장 </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="menu">
+                    <div class="name"> 영화관</div>
+                    <div class="menu_title">
+                        <div class="menu_content">
+                            <ul class="inner">
+                                <ul class="area"> 스폐셜관</ul>
+                                <!--
+                                <ul class="area"> 서울 </ul>
+                                <ul class="area"> 경기/인천 </ul>
+                                <ul class="area"> 충청/대전 </ul>
+                                <ul class="area"> 전라/광주 </ul>
+                                <ul class="area"> 경북/대구 </ul>
+                                <ul class="area"> 경남/부산/울산 </ul>
+                                <ul class="area"> 강원 </ul>
+                                <ul class="area"> 제주 </ul> 
+                            -->
+                            </ul>
+
+                        </div>
+                    </div>
+                </li>
+
+                <li class="menu">
+                    <div class="name">이벤트 </div>
+                    <div class="menu_title">
+                        <div class="menu_content">
+                            <ul class="inner">
+                                <li> 영화 </li>
+                                <li> 시사회/무대인사 </li>
+                                <li> HOT </li>
+                                <li> 제휴할인 </li>
+                                <li> 우리동네영화관 </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="menu">
+                    <div class="name"> 스토어 </div>
+                    <div class="menu_title">
+                        <div class="menu_content">
+                            <ul class="inner">
+                                <li> 베스트 </li>
+                                <li> 관람권 </li>
+                                <li> 스낵음료 </li>
+                                <li> 포토카드 </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
 
     </header>
 </body>
